--- a/Invaders/vista.qrc
+++ b/Invaders/vista.qrc
@@ -4,5 +4,6 @@
         <file>fondo.png</file>
         <file>fondoNegroPoVacias.jpg</file>
         <file>jugador.png</file>
+        <file>blast.png</file>
     </qresource>
 </RCC>
